sql content AND LAYOUT CHANGES COMPLETED

--- a/src/app/angular/ng/ng.component.html
+++ b/src/app/angular/ng/ng.component.html
@@ -6,7 +6,7 @@
         <button class="styled" routerLink="data-binding">Data Binding</button>
         <button class="styled" routerLink="directives-pipes">Directives & Pipes</button>
         <button class="styled" routerLink="lifecycle-hooks">Lifecycle Hooks</button>
-        <button class="styled" routerLink="templates-forms">Templates & Forms</button><br>
+        <button class="styled" routerLink="templates-forms">Templates & Forms</button>
        <!-- Intermediate Angular -->
         <button class="styled" routerLink="services-di">Services & Dependency Injection</button>
         <button class="styled" routerLink="routing-navigation">Routing & Navigation</button>
