--- a/src/app/sql/data-type/data-type.component.html
+++ b/src/app/sql/data-type/data-type.component.html
@@ -25,7 +25,7 @@
 
 -- String Data Types:
 -- VARCHAR(n): Variable-length strings up to n characters
--- CHAR(n): Fixed-length strings, padded with spaces
+-- CHAR(n): Fixed-length strings, added with spaces
 -- TEXT: Large text data (articles, descriptions)
 -- NVARCHAR(n): Unicode variable-length strings
 
