--- a/src/app/sql/sqlhome/sqlhome.component.html
+++ b/src/app/sql/sqlhome/sqlhome.component.html
@@ -1,9 +1,5 @@
 <div class="wraper">
-    <!-- <div class="title">
-        <h1>java-script</h1>
-    </div> -->
-
-    <div class="list">
+        <div class="list">
         <button class="styled" routerLink="data-types">Data Types & Tables</button>
         <button class="styled" routerLink="basic-queries">Basic Queries</button>
         <button class="styled" routerLink="filtering">Filtering & Sorting</button>
@@ -15,7 +11,9 @@
         <button class="styled" routerLink="stored-procedures">Stored Procedures & Functions</button>
         <button class="styled" routerLink="transactions">Transactions & ACID</button>
         <button class="styled" routerLink="indexing">Indexing & Constraints</button>
-   
+        <button class="styled" routerLink="advanced-sql">Interview-sql</button>
+        
+           
       <!--  Fundamentals:
             Data Types & Tables (understanding SQL data types and table structure)
             Filtering & Sorting (WHERE, ORDER BY, LIMIT)
@@ -36,7 +34,6 @@
             Advanced SQL Features (triggers, views, materialized views)
             Security & Permissions (user roles, access control)
             Database Administration (backup, recovery, maintenance)-->
-        <button class="styled" routerLink="advanced-sql">Advanced-sql</button>
     </div>
 
     <div class="sub-components-wraper">
