--- a/src/app/github/process/process.component.scss
+++ b/src/app/github/process/process.component.scss
@@ -7,6 +7,7 @@ p, h1, h2, h3, h4, h5, h6 {
     padding: 20px 20px 100px;
     display: flex;
     flex-direction: column;
+    // width: 98%;
     gap: 20px;
     background-color: #FFF;
     overflow-y: auto;
