--- a/src/app/sql/advanced-sql/advanced-sql.component.scss
+++ b/src/app/sql/advanced-sql/advanced-sql.component.scss
@@ -3,7 +3,7 @@ p, h1, h2, h3, h4, h5, h6 {
     padding: 0px;
   }
  
-  .oveall-wraper {
+  .overall-wrapper {
     padding: 20px 20px 100px;
     display: flex;
     flex-direction: column;
@@ -11,65 +11,9 @@ p, h1, h2, h3, h4, h5, h6 {
     background-color: #FFF;
     overflow-y: auto;
     overflow-x: hidden;
-       
-   // header
-  .wrapper {
-    display: flex;
-    justify-content: start;
-    position: relative;
 
-    .header {
-      width: 100%;
-      height: 100px;
-      display: flex;
-      justify-content: space-evenly;
-      gap: 20px;
-      
-      p {
-        width: 33%;
-        border: 1px solid rgba(128, 128, 128, 0.468);
-        border-radius: 10px;
-        line-height: 1.2rem;
-        overflow-y: auto;
-        padding: 10px;
-        
-        .question {
-          font-weight: bold;
-        }
-      }
-    }
-  }
-  
-    // cards
-    .examples {
+    .examples{
       width: 100%;
       height: auto;
-    }
-}
-
-
- hr {
-    margin: 30px 0;
-    border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
-  }
-  
-  .swap {
-    cursor: pointer;
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    top: -20px;
-    right: -20px;
-    z-index: 10;
-    background-color: #FFF;
-    border-radius: 50%;
-    padding: 3px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s;
-    
-    &:hover {
-      transform: scale(1.1);
     }
   }
