--- a/src/app/sql/sqlhome/sqlhome.component.scss
+++ b/src/app/sql/sqlhome/sqlhome.component.scss
@@ -4,31 +4,28 @@ p,h1,h2,h3,h4,h5,h6{
     padding: 0px;
 }
 .wraper{
-    height: 100%;
     width: 100%;
+    height: 100%;
     display:flex;
-    flex-direction: column;
     justify-content: center;
     align-self: center;
    
     .list{
-        height: 20%;
-        width: 100%; 
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        gap: 10px;
+        height: 100%;
+        width: 20%;
         overflow-y: auto;
-        padding:10px;
-        border: 1px solid gray;
+        display:flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px;
+           border-right: 1px solid rgba(128, 128, 128, 0.195);
         border-radius: 5px;
 
         .styled {
-            height: 40px;
+            // height: 40px;
+            margin-bottom: 10px;
             border: 0;
-            line-height: 2.5;
-            padding: 0 15px;
+            padding: 10px 15px;
             font-size: 0.9rem;
             font-weight: bold;
             text-align: center;
@@ -64,10 +61,8 @@ p,h1,h2,h3,h4,h5,h6{
         }
     }
     .sub-components-wraper{
-        height: 85%;
-        width: 100%;
-        overflow-y: auto;
-        // display: flex;
-        // justify-content: space-around;        
+        height: 100%;
+        width: 80%;
+        overflow-y: auto; 
     }
 }
